--- a/RadyoKlasikMobile/package.json
+++ b/RadyoKlasikMobile/package.json
@@ -17,8 +17,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-track-player": "^4.1.1",
-    "socket.io-client": "^4.7.5"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
