--- a/RadyoKlasikServer/docker-compose.yml
+++ b/RadyoKlasikServer/docker-compose.yml
@@ -14,14 +14,14 @@ services:
     image: "redis:7.0-alpine"
   celery:
     build: .
-    command: celery -A tasks worker --loglevel=info
+    command: celery -A celery_app.celery_app worker --loglevel=info
     volumes:
       - .:/app
     depends_on:
       - redis
   celery-beat:
     build: .
-    command: celery -A tasks beat --loglevel=info
+    command: celery -A celery_app.celery_app beat --loglevel=info
     volumes:
       - .:/app
     depends_on:
