--- a/RadyoKlasikServer/docker-compose.yml
+++ b/RadyoKlasikServer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   web:
     build: .
@@ -14,14 +12,14 @@ services:
     image: "redis:7.0-alpine"
   celery:
     build: .
-    command: celery -A app.celery_app worker --loglevel=info
+    command: celery -A celery_config worker --loglevel=info
     volumes:
       - .:/app
     depends_on:
       - redis
   celery-beat:
     build: .
-    command: celery -A app.celery_app beat --loglevel=info
+    command: celery -A celery_config worker --loglevel=info
     volumes:
       - .:/app
     depends_on:
