--- a/RadyoKlasikServer/docker-compose.yml
+++ b/RadyoKlasikServer/docker-compose.yml
@@ -1,10 +1,26 @@
-version: "3.8"
-
 services:
   web:
     build: .
-    command: gunicorn --bind 0.0.0.0:8000 wsgi:app
+    command: gunicorn --config gunicorn_config.py wsgi:app
+    volumes:
+      - .:/app
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+    depends_on:
+      - redis
+  redis:
+    image: "redis:7.0-alpine"
+  celery:
+    build: .
+    command: celery -A celery_config worker --loglevel=info
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+  celery-beat:
+    build: .
+    command: celery -A celery_config worker --loglevel=info
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
