--- a/RadyoKlasikMobile/ios/RadyoKlasikMobile/Info.plist
+++ b/RadyoKlasikMobile/ios/RadyoKlasikMobile/Info.plist
@@ -27,6 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>radyoklasikmobile</string>
           <string>com.yourcompany.mymusicapp</string>
         </array>
       </dict>
@@ -60,6 +61,10 @@
     </dict>
     <key>NSMicrophoneUsageDescription</key>
     <string>Allow $(PRODUCT_NAME) to access your microphone</string>
+    <key>NSUserActivityTypes</key>
+    <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+    </array>
     <key>UIBackgroundModes</key>
     <array>
       <string>audio</string>
