--- a/RadyoKlasikServer/package.json
+++ b/RadyoKlasikServer/package.json
@@ -29,7 +29,8 @@
     "music-metadata": "^9.0.1",
     "node-id3": "^0.2.6",
     "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
