--- a/RadyoKlasikMobile/ios/RadyoKlasikMobile/Info.plist
+++ b/RadyoKlasikMobile/ios/RadyoKlasikMobile/Info.plist
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>radyoklasikmobile</string>
-          <string>com.yourcompany.mymusicapp</string>
+          <string>com.baharralfi.radyoklasik</string>
         </array>
       </dict>
       <dict>
@@ -59,8 +59,6 @@
         </dict>
       </dict>
     </dict>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your microphone</string>
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
