--- a/RadyoKlasikMobile/app.json
+++ b/RadyoKlasikMobile/app.json
@@ -26,7 +26,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive_icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.baharralfi.radyoklasik",
@@ -55,7 +55,7 @@
         "expo-asset",
         {
           "assets": [
-            "./assets/adaptive-icon.png",
+            "./assets/adaptive_icon.png",
             "./assets/bg.png",
             "./assets/favicon.png",
             "./assets/icon.png",
