--- a/RadyoKlasikMobile/package.json
+++ b/RadyoKlasikMobile/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "^4.5.2",
     "expo": "~51.0.21",
+    "expo-asset": "~10.0.10",
     "expo-build-properties": "~0.12.3",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.20",
@@ -25,8 +27,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-track-player": "^4.1.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-asset": "~10.0.10"
+    "vexo-analytics": "^1.3.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
