feat(frontend): implement expo notification token generation
 - Waiting for backend to be completed for sending the token to database.

--- a/RadyoKlasikMobile/app.json
+++ b/RadyoKlasikMobile/app.json
@@ -31,7 +31,8 @@
       },
       "package": "com.baharralfi.radyoklasik",
       "versionCode": 1,
-      "permissions": ["WAKE_LOCK"]
+      "permissions": ["WAKE_LOCK"],
+      "googleServicesFile": "./android/app/google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
