--- a/RadyoKlasikMobile/package.json
+++ b/RadyoKlasikMobile/package.json
@@ -27,7 +27,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-track-player": "^4.1.1",
-    "vexo-analytics": "^1.3.15"
+    "vexo-analytics": "^1.3.15",
+    "expo-notifications": "~0.28.10",
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
