--- a/RadyoKlasikServer/package.json
+++ b/RadyoKlasikServer/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "expo-server-sdk": "^3.10.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "fluent-ffmpeg": "^2.1.3",
