--- a/RadyoKlasikMobile/package.json
+++ b/RadyoKlasikMobile/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/slider": "^4.5.2",
     "expo": "~51.0.21",
     "expo-asset": "~10.0.10",
     "expo-build-properties": "~0.12.3",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.20",
+    "expo-device": "~6.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.10",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -27,9 +30,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-track-player": "^4.1.1",
-    "vexo-analytics": "^1.3.15",
-    "expo-notifications": "~0.28.10",
-    "expo-device": "~6.0.2"
+    "vexo-analytics": "^1.3.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
