--- a/RadyoKlasikMobile/extras/app.json
+++ b/RadyoKlasikMobile/extras/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "scheme": "radyoklasikmobile",
-    "name": "RadyoKlasikMobile",
-    "slug": "RadyoKlasikMobile",
+    "scheme": "radyoklasik",
+    "name": "Radyo Klasik",
+    "slug": "Radyo-Klasik",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,13 +15,17 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.baharralfi.radyoklasik",
       "buildNumber": "1.0.0",
       "infoPlist": {
-        "UIBackgroundModes": ["audio"]
+        "UIBackgroundModes": [
+          "audio"
+        ]
       }
     },
     "android": {
@@ -31,27 +35,21 @@
       },
       "package": "com.baharralfi.radyoklasik",
       "versionCode": 1,
-      "permissions": ["WAKE_LOCK", "RECEIVE_BOOT_COMPLETED"],
+      "permissions": [
+        "WAKE_LOCK",
+        "RECEIVE_BOOT_COMPLETED"
+      ],
       "googleServicesFile": "./android/app/google-services.json",
       "useNextNotificationsApi": true
+    },
+    "notification": {
+      "icon": "./assets/notifIcon.png",
+      "iosDisplayInForeground": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "e179700a-aad8-4877-a091-9e877f3b4317"
-      }
-    },
     "plugins": [
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            "usesCleartextTraffic": true
-          }
-        }
-      ],
       "expo-router",
       [
         "expo-asset",
@@ -62,10 +60,19 @@
             "./assets/favicon.png",
             "./assets/icon.png",
             "./assets/logo.png",
-            "./assets/splash.png"
+            "./assets/splash.png",
+            "./assets/notifIcon.png"
           ]
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "024de01d-c2fb-42c7-9a64-fe67eef6e173"
+      }
+    }
   }
 }
